--- a/virtual_lab/src/main/webapp/partials/contact.html
+++ b/virtual_lab/src/main/webapp/partials/contact.html
@@ -1,119 +1,74 @@
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">HuNI Virtual Laboratory</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-            <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
-          </div><!--/.nav-collapse -->
-        </div>
+    <div class="container-fluid"> <!-- main content start -->
+
+ <div class="row-fluid">
+        <h2>Contact</h2>
       </div>
-    </div>
 
-    <div class="container-fluid">
-      <div class="row-fluid">
+    <div class="row-fluid">
+      <div class="span6">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum erat purus, sit amet rhoncus felis. Sed fringilla rhoncus nisl mattis pellentesque. Nam eros metus, commodo et accumsan sed, egestas quis tortor. Morbi sapien purus, accumsan non tempus quis, condimentum ut nulla.</p>
 
-          <div class="well sidebar-nav left">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-            </ul>
-          </div><!--/.well -->
+       
 
+      <h3>Contact Details</h3>
+      <p>Aliquam erat volutpat. Integer auctor felis non metus feugiat a vestibulum enim cursus. Etiam nec nibh sed mauris vulputate sollicitudin. Praesent mi metus, ultricies eget consequat et, tempus eu nibh. Ut nec aliquam erat. In in tortor dui, vitae dignissim libero. Donec adipiscing mi eu risus elementum vehicula. Suspendisse potenti. Cras bibendum volutpat luctus. Donec semper tellus lorem. </p>
 
-          <div class="well sidebar-nav right">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-            </ul>
-          </div><!--/.well -->
+      <p><i class="icon-envelope"></i> Email: <a href="#">link</a></p>
 
-        <div class="content fixed-fixed">
-          <div class="hero-unit">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-          </div>
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-        </div><!--/span-->
-      </div><!--/row-->
+      <h3>Social Media</h3>
+      <p>Donec adipiscing mi eu risus elementum vehicula. Suspendisse potenti. Cras bibendum volutpat luctus. Donec semper tellus lorem. </p>
+      <p><i class="icon-user"></i> Facebook: <a href="#">link</a></p>
 
-      <hr>
+      <p><i class="icon-comment"></i> Twitter: <a href="#">link</a></p>
 
-      <footer>
-        <p>&copy; VeRSI 2012</p>
-      </footer>
+      <p><i class="icon-camera"></i> Instagram: <a href="#">link</a></p>
 
     </div>
-    <!--/.fluid-container-->
- 
+    <div class="span6">
+
+    <form id="contact" class="form-horizontal">
+
+    <div class="control-group">
+    <label class="control-label" for="inputFirstName">First Name</label>
+    <div class="controls">
+    <input type="text" id="inputFirstName" placeholder="First Name">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputLastName">Last Name</label>
+    <div class="controls">
+    <input type="text" id="inputLastName" placeholder="Last Name">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputEmail">Email Address</label>
+    <div class="controls">
+    <input type="text" id="inputEmail" placeholder="Email Address">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputNumber">Phone Number</label>
+    <div class="controls">
+    <input type="text" id="inputNumber" placeholder="Phone Number">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputMessage">Message</label>
+    <div class="controls">
+    <textarea rows="5" id="inputMessage" placeholder="Message"></textarea>
+    </div>
+    </div>
+    
+    <div class="control-group">
+    <div class="controls">
+    <button type="submit" class="btn">Send</button>
+    </div>
+    </div>
+    </form>
+
+    </div>
+  </div> <!-- main content end -->     
