--- a/virtual_lab/src/main/webapp/partials/landing.html
+++ b/virtual_lab/src/main/webapp/partials/landing.html
@@ -1,119 +1,58 @@
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">HuNI Virtual Laboratory</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-            <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    <div class="container-fluid"> <!-- main content start -->
 
-    <div class="container-fluid">
       <div class="row-fluid">
+        <div class="search-container">
+        <h2>Linked Data Search</h2>
+        <form class="searchbox" action="http://corbicula.huni.net.au/facet-browser/facet-browser.html" method="get">
 
-          <div class="well sidebar-nav left">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-            </ul>
-          </div><!--/.well -->
-
-
-          <div class="well sidebar-nav right">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-            </ul>
-          </div><!--/.well -->
-
-        <div class="content fixed-fixed">
-          <div class="hero-unit">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-          </div>
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-        </div><!--/span-->
-      </div><!--/row-->
-
-      <hr>
-
-      <footer>
-        <p>&copy; VeRSI 2012</p>
-      </footer>
-
+    <div class="input-prepend">
+    <div class="btn-group">
+    <button class="btn dropdown-toggle" data-toggle="dropdown">
+   All fields
+    <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+    <li>Advanced</li>
+    <li>-</li>
+    <li>People</li>
+    <li>Places</li>
+    <li>Objects</li>
+    <li>Events</li>
+    </ul>
     </div>
-    <!--/.fluid-container-->
- 
+    <input id="search" type="text" name="text" placeholder="Type your search here to begin!">
+    </div>
+
+                
+                <input id="submit" type="submit" value="Search">
+            </form>
+
+            <span style="float:left;"><form><input type="checkbox" name="records" value="yes">Include similar/related records</form></span>
+            <span style="float:right; margin-bottom: 20px;">Stuck? Try the <a href="advanced-search.html">Advanced Search</a>!</span>
+
+            <h4>Find and get more than 2 million records on the people, places, objects and events that make up Australia's rich cultural heritage.</h4>
+
+            <div class="entry first">
+            	<div class="people-background">
+            		<a href="/virtual_lab/huni_aggregate.html#/familyname-search">People</a>
+            	</div>
+            </div>
+            <div class="entry">
+            	<div class="places-background">
+            		<a href="/virtual_lab/huni_aggregate.html#/placename-search">Places</a>
+            	</div>
+            </div>
+            <div class="entry first">
+            	<div class="objects-background">
+            		<a href="/virtual_lab/huni_aggregate.html#/objectname-search">Objects</a>
+            	</div>
+            </div>
+            <div class="entry">
+            	<div class="events-background">
+            		<a href="/virtual_lab/huni_aggregate.html#/eventname-search">Events</a>
+            	</div>
+            </div>
+            </div>
+      </div>
+
+    </div> <!-- main content end -->     
